2003-01-23  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	PR java/6748
	* config/rs6000/linux.h (MD_FALLBACK_FRAME_STATE_FOR): Don't destroy
	regs->nip. Fix rt_sigreturn frame layout. Add support for newer
	kernels.

2003-01-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* cpplex.c (cpp_interpret_charconst): Squelch warning with cast.

2003-01-23  Ulrich Weigand  <uweigand@de.ibm.com>

	* genattrtab.c (write_attr_get): Mark 'insn' paramter
	as ATTRIBUTE_UNUSED.

2003-01-23  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (thumb_base_register_rtx_p): New function.
	(thumb_index_register_rtx_p): New function.
	(thumb_legitimate_address_p): New function.
	(thumb_legitimate_offset_p): New function.
	* arm.h (REG_STRICT_P): Define according to setting of REG_OK_STRICT.
	(ARM_GO_IF_LEGITIMATE_ADDRESS): Use REG_STRICT_P to avoid duplicate
	definitions.
	(THUMB_GO_IF_LEGITIMATE_ADDRESS): Use thumb_legitimate_address_p.
	(THUMB_LEGITIMATE_OFFSET): Delte.
	(THUMB_LEGITIMIZE_RELOAD_ADDRESS): Use thumb_legitimate_offset.
	* arm-protos.h (thumb_legitimate_address_p): Add prototype.
	(thumb_legitimate_offset_p): Likewise.

2003-01-23  Andreas Schwab  <schwab@suse.de>

	* unwind.h (_Unwind_GetTextRelBase): Mark parameter as unused.

2003-01-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* fixinc/Makefile.in (FL_LIST): Revert last change.

2003-01-23  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR other/7341
	* invoke.texi (ftest-coverage): Fix broken cross-reference.
	Change @code to @command for gcov command.

	* gcc.texi: Adjust title of gcov section.
	Adjust copyright.
	* gcov.texi: Likewise.

2003-01-22  Roger Sayle  <roger@eyesopen.com>

	PR optimization/8423
	* cse.c (fold_rtx): Only eliminate a CONSTANT_P_RTX to 1 when
	its argument is constant, or 0 if !flag_gcse.
	* simplify-rtx.c (simplify_rtx): Convert CONSTANT_P_RTX to 1
	if it's argument is constant.
	* gcse.c (want_to_gcse_p): Ignore CONSTANT_P_RTX nodes.