@@ -166,7 +166,7 @@ next_fde (fde *f)
 extern fde * _Unwind_Find_FDE (void *, struct dwarf_eh_bases *);
 
 static inline int
-last_fde (struct object *obj ATTRIBUTE_UNUSED, fde *f)
+last_fde (struct object *obj __attribute__ ((__unused__)), fde *f)
 {
 #ifdef DWARF2_OBJECT_END_PTR_EXTENSION
   return (char *)f == obj->fde_end || f->length == 0;
